--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/bottom-tabs": "6",
+    "@react-navigation/native": "6",
+    "@react-navigation/native-stack": "6",
     "expo": "~52.0.43",
     "expo-camera": "~16.0.18",
     "expo-location": "~18.0.10",
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.20"
+    "@types/react": "^18.3.20",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
