--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.6.1",
     "expo": "~52.0.43",
-    "expo-camera": "~16.0.18",
+    "expo-camera": "^16.0.18",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
