--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "expo": "~52.0.43",
     "expo-camera": "~16.0.18",
+    "expo-linear-gradient": "~14.0.2",
     "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
