--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.6.1",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.43",
     "expo-camera": "^16.0.18",
+    "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "~14.0.2",
-    "expo-image-picker": "~16.0.6",
     "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
