--- a/package.json
+++ b/package.json
@@ -1,36 +1,45 @@
 {
-  "name": "skaterquest-frontend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-navigation/bottom-tabs": "6",
-    "@react-navigation/native": "6",
-    "@react-navigation/native-stack": "6",
-    "@reduxjs/toolkit": "^2.6.1",
-    "expo": "~52.0.43",
-    "expo-camera": "^16.0.18",
-    "expo-image-picker": "^16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-location": "~18.0.10",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-maps": "1.18.0",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.20",
-    "typescript": "^5.3.3"
-  },
-  "private": true
+    "name": "skaterquest-frontend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@react-navigation/bottom-tabs": "6",
+        "@react-navigation/native": "6",
+        "@react-navigation/native-stack": "6",
+        "@reduxjs/toolkit": "^2.6.1",
+        "expo": "~52.0.43",
+        "expo-camera": "^16.0.18",
+        "expo-image-picker": "^16.0.6",
+        "expo-linear-gradient": "~14.0.2",
+        "expo-location": "~18.0.10",
+        "expo-status-bar": "~2.0.1",
+        "react": "18.3.1",
+        "react-native": "0.76.9",
+        "react-native-maps": "1.18.0",
+        "react-native-safe-area-context": "4.12.0",
+        "react-native-screens": "~4.4.0",
+        "react-native-vector-icons": "^10.2.0",
+        "react-redux": "^9.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.26.10",
+        "@babel/preset-env": "^7.26.9",
+        "@types/react": "^18.3.20",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
+        "typescript": "^5.3.3"
+    },
+    "private": true,
+    "jest": {
+        "transform": {
+            "^.+\\.[t|j]sx?$": "babel-jest"
+        },
+        "testEnvironment": "node"
+    }
 }
