--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "web": "expo start --web"
     },
     "dependencies": {
+        "@expo/vector-icons": "^14.0.2",
         "@react-native-async-storage/async-storage": "^2.1.2",
         "@react-native-picker/picker": "^2.11.0",
         "@react-navigation/bottom-tabs": "6",
@@ -23,12 +24,15 @@
         "expo-status-bar": "~2.0.1",
         "react": "18.3.1",
         "react-native": "0.76.9",
+        "react-native-animatable": "^1.4.0",
+        "react-native-linear-gradient": "^2.8.3",
         "react-native-maps": "1.18.0",
-    "react-native-paper": "^5.13.1",
+        "react-native-paper": "^5.13.1",
         "react-native-safe-area-context": "4.12.0",
         "react-native-screens": "~4.4.0",
         "react-native-vector-icons": "^10.2.0",
-        "react-redux": "^9.2.0"
+        "react-redux": "^9.2.0",
+        "redux-persist": "^6.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.26.10",
