--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "web": "expo start --web"
     },
     "dependencies": {
+        "@expo/vector-icons": "^14.0.2",
         "@react-native-async-storage/async-storage": "^2.1.2",
         "@react-native-picker/picker": "^2.11.0",
         "@react-navigation/bottom-tabs": "6",
@@ -23,6 +24,7 @@
         "expo-status-bar": "~2.0.1",
         "react": "18.3.1",
         "react-native": "0.76.9",
+        "react-native-animatable": "^1.4.0",
         "react-native-maps": "1.18.0",
         "react-native-paper": "^5.13.1",
         "react-native-safe-area-context": "4.12.0",
