modified gitignore to exclude lock files (no more conflict on merge)

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,9 @@ yarn-error.*
 .env*.local
 config.js
 
-config.js
+#lock file (no conflict)
+package-lock.json
+yarn.lock
 
 # typescript
 *.tsbuildinfo
