--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react": "18.3.1",
         "react-native": "0.76.9",
         "react-native-animatable": "^1.4.0",
+        "react-native-confetti-cannon": "^1.5.2",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-maps": "1.18.0",
         "react-native-paper": "^5.13.1",
