--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "@react-navigation/native-stack": "6",
         "@reduxjs/toolkit": "^2.6.1",
         "expo": "~52.0.43",
-        "expo-camera": "^16.0.18",
+        "expo-av": "~15.0.2",
+        "expo-camera": "~16.0.18",
         "expo-image-picker": "^16.0.6",
         "expo-linear-gradient": "~14.0.2",
         "expo-location": "~18.0.10",
+        "expo-media-library": "~17.0.6",
         "expo-status-bar": "~2.0.1",
         "react": "18.3.1",
         "react-native": "0.76.9",
