add video player for uservideo screen

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@expo/vector-icons": "^14.0.2",
         "@react-native-async-storage/async-storage": "^2.1.2",
+        "@react-native-community/hooks": "^100.1.0",
         "@react-native-picker/picker": "^2.11.0",
         "@react-navigation/bottom-tabs": "6",
         "@react-navigation/native": "6",
@@ -24,6 +25,7 @@
         "expo-location": "~18.0.10",
         "expo-media-library": "~17.0.6",
         "expo-status-bar": "~2.0.1",
+        "expo-video": "~2.0.6",
         "react": "18.3.1",
         "react-native": "0.76.9",
         "react-native-animatable": "^1.4.0",
