--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "expo-media-library": "~17.0.6",
         "expo-status-bar": "~2.0.1",
         "expo-video": "~2.0.6",
+        "expo-video-thumbnails": "~9.0.3",
         "react": "18.3.1",
         "react-native": "0.76.9",
         "react-native-animatable": "^1.4.0",
