--- a/package.json
+++ b/package.json
@@ -18,25 +18,26 @@
     "@react-navigation/native": "6",
     "@react-navigation/native-stack": "6",
     "@reduxjs/toolkit": "^2.6.1",
-    "expo": "~52.0.43",
-    "expo-av": "~15.0.2",
-    "expo-camera": "~16.0.18",
-    "expo-image-picker": "^16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-location": "~18.0.10",
-    "expo-media-library": "~17.0.6",
-    "expo-status-bar": "~2.0.1",
-    "expo-video": "~2.0.6",
-    "expo-video-thumbnails": "^9.0.3",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "expo": "^53.0.9",
+    "expo-av": "~15.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-location": "~18.1.5",
+    "expo-media-library": "~17.1.6",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.13",
+    "expo-video": "~2.1.9",
+    "expo-video-thumbnails": "~9.1.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.13.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
@@ -49,11 +50,11 @@
     "@babel/preset-typescript": "^7.27.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
-    "@types/react": "^18.3.20",
+    "@types/react": "~19.0.10",
     "babel-jest": "^29.7.0",
-    "babel-preset-expo": "^12.0.11",
+    "babel-preset-expo": "~13.0.0",
     "jest": "^29.7.0",
-    "jest-expo": "^52.0.6",
+    "jest-expo": "~53.0.5",
     "react-test-renderer": "^19.1.0",
     "ts-jest": "^29.3.2",
     "typescript": "^5.3.3"
