Nettoyage sur tout le code et sur les commentaires

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,9 @@ yarn.lock
 # typescript
 *.tsbuildinfo
 
-# test pour bootcamp
+# Tests pour l'évaluation de La Capsule
 user.test.js
+tricks.test.js
+
+# Other
+obsolete/
